// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-coYmiO cebwgI"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-BKyeB encsrm"
    size="small"
  >
    <input
      checked={true}
      className="sc-dyfiKA iemBOP"
      id="test-switch-1"
      onChange={[Function]}
      size="small"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-gMZIbH ePHoeg"
      size="small"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
Array [
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB jUtsfj"
      size="medium"
    >
      <input
        checked={true}
        className="sc-dyfiKA iemBOP"
        id="button-switch-1"
        onChange={[Function]}
        size="medium"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH hObsLv"
        size="medium"
      >
        <span
          className="sc-csjKPv fYiSLV"
        >
          <p
            className="sc-hFbbzE wiWBY"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-hFbbzE wiWBY"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB cRmjDc"
      size="large"
    >
      <input
        checked={true}
        className="sc-dyfiKA iemBOP"
        id="button-switch-2"
        onChange={[Function]}
        size="large"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH hObsLv"
        size="large"
      >
        <span
          className="sc-csjKPv fYiSLV"
        >
          <p
            className="sc-hFbbzE wiWBY"
            size={14}
          >
            Off
          </p>
          <p
            className="sc-hFbbzE wiWBY"
            size={14}
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Switch renders Disabled state 1`] = `
Array [
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB fXInWf"
      disabled={true}
      size="small"
    >
      <input
        checked={true}
        className="sc-dyfiKA iemBOP"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH ePHoeg"
        size="small"
      />
    </label>
  </div>,
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB fXInWf"
      disabled={true}
      size="small"
    >
      <input
        checked={false}
        className="sc-dyfiKA iemBOP"
        id="test-switch-disabled"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-gMZIbH fwrBxA"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders Theme variant 1`] = `
Array [
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB laZulY"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-dyfiKA lkzvRG"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH dyQGGA"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB jlAgjf"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-dyfiKA hFAkUK"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH fRNNJz"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB encsrm"
      size="small"
    >
      <input
        checked={true}
        className="sc-dyfiKA hFAkUK"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH hJTzHA"
        size="small"
      />
    </label>
  </div>,
]
`;

exports[`Switch renders different Sizes 1`] = `
Array [
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB laZulY"
      size="twoxsmall"
    >
      <input
        checked={true}
        className="sc-dyfiKA iGQlpn"
        id="test-switch-1"
        onChange={[Function]}
        size="twoxsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH khQQOY"
        size="twoxsmall"
      />
    </label>
  </div>,
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB jlAgjf"
      size="xsmall"
    >
      <input
        checked={true}
        className="sc-dyfiKA iemBOP"
        id="test-switch-2"
        onChange={[Function]}
        size="xsmall"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH jsbWOn"
        size="xsmall"
      />
    </label>
  </div>,
  <div
    className="sc-coYmiO cebwgI"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-BKyeB encsrm"
      size="small"
    >
      <input
        checked={true}
        className="sc-dyfiKA iemBOP"
        id="test-switch-3"
        onChange={[Function]}
        size="small"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-gMZIbH ePHoeg"
        size="small"
      />
    </label>
  </div>,
]
`;
